ferric/tests/ui/semantic_err_04.stderr
error: undefined observed variable `grass_wet2`
  --> tests/ui/semantic_err_04.rs:28:13
   |
28 |     observe grass_wet2;
   |             ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `grass`
  --> tests/ui/semantic_err_04.rs:32:18
   |
32 |     let _model = grass::Model { grass_wet: true };
   |                  ^^^^^ use of undeclared crate or module `grass`
